# f1_data_engineering_machine_learning

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_raw.py  02_bronze.py  03_silver.py
scripts/: 01_raw.py  05_ml_model.py  spark_ops.py
sql/: abt_champions.sql  champions.sql
